<resources>
    <string name="app_name">Story App</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Yuk, Bagikan pengalaman dan keseruan selama belajar di Dicoding!, kepada semua orang!</string>
    <string name="title_welcome_page">Selamat datang di Story App!</string>
    <string name="title_signup_page">Lengkapi data diri mu dulu, ya!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk memulai berbagi cerita?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="image">Gambar</string>
    <string name="name_user">Kratos</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="image_placeholder">Tempat Gambar</string>
    <string name="empty_image_warning">Error saat mengunggah gambar</string>
    <string name="add_widget">Tambah widget</string>
    <string name="app_widget_description">Ini adalah deskripsi widget aplikasi</string>
    <string name="appwidget_text">Gambar Cerita</string>
    <string name="empty_text">TIDAK ADA DATA</string>
    <string name="upload">Unggah</string>
    <string name="description">Deskripsi</string>
    <string name="gallery">Galeri</string>
    <string name="camera">Kamera</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location">Tambahkan Lokasi Saya</string>
</resources>
